# NostraUtils

./: .CMakeLists.txt.swp  .gitignore  CHANGELOG.md  CMakeLists.txt  ExportBuildFiles.py  LICENSE.md  Nostra Utils.sln  README.md
Nostra Utils/: CMakeLists.txt  Nostra Utils.vcxproj  Nostra Utils.vcxproj.filters
Nostra Utils/Doc/resources/: Color.dox  Documentation.dox  Doxyfile  Output.txt  ThreadManager.dox  Warnings.txt
Nostra Utils/cmake/: NostraUtilsConfig.cmake
Nostra Utils/doc/: AllocationCallback.dox  CMakeLists.txt  Color.dox  Documentation.dox  Doxyfile.in
Nostra Utils/src/header/nostrautils/: NostraUtils.hpp
Nostra Utils/src/header/nostrautils/core/: Assertions.hpp  Config.hpp  Config.hpp.in  ErrorHandler.hpp  Logging.hpp  Meta.hpp  StdIncludes.hpp  SystemInformation.hpp  Thread.hpp  Time.hpp  Utils.hpp  Version.hpp
Nostra Utils/src/header/nostrautils/dat_alg/: BinaryHeap.hpp  BinarySearch.hpp  Bubblesort.hpp  Comparator.hpp  ContainerInterfaces.hpp  FastQueue.hpp  FwdDcl.hpp  HashMap.hpp  HashMapTest.hpp  Hashing.hpp  LazyEvaluationProperty.hpp  ObjectPool.hpp  Quicksort.hpp  Random.hpp  String.hpp  StringView.hpp  Uninitialized.hpp  Utils.hpp  Vector.hpp
Nostra Utils/src/header/nostrautils/file_mngt/: .File.hpp.swp  .Folder.hpp.swp  File.hpp  FileManager.hpp  Folder.hpp  INIFile.hpp  IniDocument.hpp  IniParser.hpp  Path.hpp
Nostra Utils/src/header/nostrautils/lang/: Lang.hpp
Nostra Utils/src/header/nostrautils/math/: Color.hpp  Matrix-2.hpp  Matrix.hpp  Matrix3.hpp  MyMathFunction.hpp  Quaternion.hpp  Utils.hpp  Vec.hpp  Vec3.hpp  Vector.hpp  VektorLib.h
Nostra Utils/src/header/nostrautils/mem_mngt/: AllocationCallback.hpp  GeneralPurposeAllocator.hpp  Pointer.hpp  PoolAllocator.hpp  Utils.hpp
Nostra Utils/src/header/nostrautils/thread/: AsyncTaskResult.hpp  ConditionVariable.hpp  Lock.hpp  Mutex.hpp  Protection.hpp  Task.hpp  TaskQueue.hpp  ThreadManager.hpp  ThreadWrapper.hpp  Threads.hpp
Nostra Utils/src/source/nostrautils/core/: Assertions.cpp  ErrorHandler.cpp  Logging.cpp  SystemInformation.cpp  Thread.cpp  Time.cpp  Utils.cpp
Nostra Utils/src/source/nostrautils/dat_alg/: Comparator.cpp  Hashing.cpp  Random.cpp
Nostra Utils/src/source/nostrautils/file_mngt/: .File.cpp.swp  .Folder.cpp.swp  .Path.cpp.swp  File.cpp  FileManager.cpp  Folder.cpp  INIFile.cpp  IniDocument.cpp  IniParser.cpp  Path.cpp
Nostra Utils/src/source/nostrautils/lang/: Lang.cpp
Nostra Utils/src/source/nostrautils/math/: Color.cpp  Matrix.cpp  Matrix3.cpp  New_Matrix.cpp  Trigonometrie.cpp  Trigonometrie.h  Utils.cpp  Vec.cpp  Vec3.cpp  VektorLib.cpp
Nostra Utils/src/source/nostrautils/mem_mngt/: GeneralPurposeAllocator.cpp  PoolAllocator.cpp  Utils.cpp
Nostra Utils/src/source/nostrautils/thread/: AsyncTaskResult.cpp  ConditionVariable.cpp  Lock.cpp  Mutex.cpp  Task.cpp  ThreadManager.cpp  ThreadWrapper.cpp
Test/: .main.cpp.swp  Test.vcxproj  main.cpp
UnitTests/: DebugClass.cpp  DebugClass.hpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  unittests.cpp
Unittests/: .unittests.cpp.swp  CMakeLists.txt  DebugClass.cpp  DebugClass.hpp  unittests.cpp
cmake/: CPackConfig.cmake  welcome.txt
